Separate settings for background image on mobile; try to stop image from moving

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -4,6 +4,13 @@ body {
     background-attachment: fixed;
 }
 
+@media screen and (hover: none) {
+    body{
+        background: url(background.jpg);
+        background-size: cover;
+    }
+}
+
 .container {
     background-color: rgb(255, 255, 255, 0.9);
     border-radius: 12px;
